<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PROCESAGRO</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Opciones</string>
    <string name="action_exit">Salir</string>
    <string name="action_about">Acerca de</string>
    <string name="action_volver">Volver</string>
    <string name="mensaje_defecto">Hola Mathias</string>
    <string name="text01">Servicio 1</string>
    <string name="text02">Servicio 2</string>
    <string name="text03">Servicio 3</string>
    <string name="text04">Servicio 4</string>
    <string name="convocatoria">Convocatorias</string>
    <string name="tramite">Tramite</string>
    <string name="oferta1">Oferta 1</string>
    <string name="oferta2">Oferta 2</string>
    <string name="oferta3">Oferta 3</string>
    <string name="oferta4">Oferta 4</string>
    <string name="prueba">la reprueba</string>
    <string name="consultando">Consulta de la base</string>
    <string name="Bienvenida">Bienvenidos</string>
    <string name="title_activity_main_activity2">Servicio 1</string>
    <string name="textServicio1">ICA es una entidad...</string>
    <string name="title_activity_main_activity3">Servicio 2</string>
    <string name="title_activity_main_activity4">Servicio 3</string>
    <string name="title_activity_main_activity5">Servicio 4</string>
    <string name="title_activity_main_activity6">Oferta 1</string>
    <string name="title_activity_main_activity7">Oferta 2</string>
    <string name="title_activity_main_activity8">Oferta 3</string>
    <string name="title_activity_main_activity9">Oferta 4</string>
    <string name="title_activity_home">Bienvenidos</string>
    <string name="demo">Personaje Aplicación</string>

</resources>
