<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wyble.nuevita.app.MainActivity8" >

    <item android:id="@+id/action_update"
        android:title="@string/action_volver"

        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="never" />
    <item android:id="@+id/action_acerca"
        android:title="@string/action_about"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never" />
    <item android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_dialog_alert"
        app:showAsAction="never"/>
</menu>
